opencli-rs/tui/src/snapshots/opencli_tui__history_cell__tests__ps_output_long_command_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/ps

Background terminals

  ⏺ rg "foo" src --glob '**/*. [...]
    ↳ searching...
