opencli-rs/tui/src/snapshots/opencli_tui__history_cell__tests__ran_cell_multiline_with_stderr_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Executed echo
  │ this_is_a_very_lo
  │ ng_single_token_t
  │ … +3 lines
  └ error: first line on
    stderr
    error: second line on
    stderr
