opencli-rs/tui/src/snapshots/opencli_tui__history_cell__tests__single_line_command_compact_when_fits.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
╭─ ⏺ Executed ─────────────────────────────────────────────────────────────────╮
│ echo ok                                                                      │
├──────────────────────────────────────────────────────────────────────────────┤
│ (no output)                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯
