opencli-rs/tui/src/snapshots/opencli_tui__history_cell__tests__single_line_command_wraps_with_four_space_continuation.snap
---
source: tui/src/history_cell.rs
assertion_line: 2969
expression: rendered
---
╭─ ⏺ Executed
│ a_very_long_token_with
│ out_spaces_to_force_wr
│ apping
├────────
│ (no output)
╰────────
